Bug 357655 - Misaligned combo boxes for tabular view on bigger tables
Summary: Misaligned combo boxes for tabular view on bigger tables
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.9.8
Platform: openSUSE Linux
: NOR normal
Target Milestone: 2.9.11
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-07 14:59 UTC by Arseniy
Modified: 2016-03-03 22:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.11
Sentry Crash Report:


Attachments
Screenshot of incorrect UI behaviour (5.25 KB, image/png)
2016-01-07 15:02 UTC, Arseniy
Details
Both vertical and horizontal misalignment (20.69 KB, image/png)
2016-01-07 23:05 UTC, Jarosław Staniek
Details
Test file with 1000 records as described (21.00 KB, application/x-kexiproject-sqlite2)
2016-01-07 23:08 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arseniy 2016-01-07 14:59:46 UTC
Comboboxes used to select foreign key value is shifted down (or invisible if shifted down too much). It seems that bug occurs only on big tables (more than 1000—2000 rows). '▼' sign on combobox is also moved down.

Reproducible: Always

Steps to Reproduce:
1. Create table A with columns "key" and "value".
2. Create table B with a column linked to A table as a foreign key.
3. Fill B with more than 1000 rows.
4. Use comboboxes to select foreign key value.

Actual Results:  
Comboboxes is shifted down (or invisible if shifted too much). Bug occurs only if vertical scrolling is used. See screenshot.
Comment 1 Arseniy 2016-01-07 15:02:20 UTC
Created attachment 96504 [details]
Screenshot of incorrect UI behaviour

Document is scrolled down by 2 rows.
Comment 2 Jarosław Staniek 2016-01-07 15:23:27 UTC
Thanks. Your Kexi version?
Comment 3 Arseniy 2016-01-07 15:27:34 UTC
(In reply to Jarosław Staniek from comment #2)
> Thanks. Your Kexi version?

Kexi 2.9.8
KDE 4.14.10
Comment 4 Jarosław Staniek 2016-01-07 15:31:24 UTC
Thanks a lot, noted.
Comment 5 Jarosław Staniek 2016-01-07 23:00:50 UTC
Confirmed, will be fixed today for 2.9.11. 

The offset is equal to the scroll offset, so it's enough to have number of records that do not fit in the view, scroll slightly and the glitch can be reproduced.
Comment 6 Jarosław Staniek 2016-01-07 23:05:55 UTC
Created attachment 96513 [details]
Both vertical and horizontal misalignment

Please note the horizontal misalignment: the combo box is moved to right when if horizontal scrollbar is at any non-zero position.
Comment 7 Jarosław Staniek 2016-01-07 23:08:14 UTC
Created attachment 96514 [details]
Test file with 1000 records as described
Comment 8 Jarosław Staniek 2016-01-08 00:16:30 UTC
Git commit c293db532569a80e389f2061f96b719b4448ebdc by Jaroslaw Staniek.
Committed on 08/01/2016 at 00:12.
Pushed by staniek into branch 'calligra/2.9'.

Kexi: Fix alignment of table view combo boxes when rows or columns are scrolled
FIXED-IN:2.9.11

M  +9    -1    kexi/widget/tableview/kexicomboboxbase.cpp

http://commits.kde.org/calligra/c293db532569a80e389f2061f96b719b4448ebdc
Comment 9 Jarosław Staniek 2016-02-29 23:35:26 UTC
Git commit 93c018e8109c07ec457175275c71838cb1659a2d by Jaroslaw Staniek.
Committed on 29/02/2016 at 23:07.
Pushed by staniek into branch 'master'.

Fix alignment of table view combo boxes when rows or columns are scrolled
FIXED-IN:2.9.11

(from calligra.git)

M  +12   -3    src/widget/tableview/kexicomboboxbase.cpp

http://commits.kde.org/kexi/93c018e8109c07ec457175275c71838cb1659a2d