Kexi: Fix alignment of table view combo boxes when rows or columns are scrolled

BUG:357655
FIXED-IN:2.9.11